k8s/overlays/dev/aliyun-image-mirror.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
spec:
  template:
    spec:
      containers:
        - name: jobmanager
          # image: docker.xuanyuan.me/flink:1.20.3-scala_2.12-java17
          image: public.ecr.aws/docker/library/flink:1.20.3-scala_2.12-java17
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
spec:
  template:
    spec:
      containers:
        - name: taskmanager
          # image: docker.xuanyuan.me/flink:1.20.3-scala_2.12-java17
          image: public.ecr.aws/docker/library/flink:1.20.3-scala_2.12-java17

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iotdb
spec:
  template:
    spec:
      imagePullSecrets:
        - name: aws-regcred
      containers:
        - name: iotdb
          image: 661147623816.dkr.ecr.ap-east-1.amazonaws.com/dockerhub/apache/iotdb:1.3.5-standalone
