k8s/overlays/dev/flink-tz-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
spec:
  template:
    spec:
      containers:
        - name: jobmanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
spec:
  template:
    spec:
      containers:
        - name: taskmanager
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iotdb
spec:
  template:
    spec:
      containers:
        - name: iotdb
