k8s/overlays/dev/ingressroute-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: iotdb-tcp
spec:
  entryPoints:
    - iotdb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: iotdb
          port: 6667
